--- a/templates/search.html
+++ b/templates/search.html
@@ -144,5 +144,8 @@ if (initialQuery) {
   searchPosts(initialQuery);
 }
 </script>
+<footer>
+<img src="/0unz.png" alt="0u logo" class="footer-logo">
+</footer>
 </body>
 </html>
