--- a/templates/tree.html
+++ b/templates/tree.html
@@ -18,5 +18,8 @@
 </div>
 <hr>
 <p><a href="/">← index</a></p>
+<footer>
+<img src="/0unz.png" alt="0u logo" class="footer-logo">
+</footer>
 </body>
 </html>
