--- a/templates/post.html
+++ b/templates/post.html
@@ -36,5 +36,8 @@ MathJax = {
 </article>
 <hr>
 <p><a href="/">← index</a></p>
+<footer>
+<img src="/0unz.png" alt="0u logo" class="footer-logo">
+</footer>
 </body>
 </html>
