feat: Integrate Google Fonts and update footer inclusion across templates

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,8 +9,6 @@
 <h1>0u</h1>
 {{nav}}
 {{content}}
-<footer>
-<img src="/0unz.png" alt="0u logo" class="footer-logo">
-</footer>
+{{footer}}
 </body>
 </html>
