--- a/templates/friends.html
+++ b/templates/friends.html
@@ -11,8 +11,6 @@
 <ul>
 {{friends_list}}
 </ul>
-<footer>
-<img src="/0unz.png" alt="0u logo" class="footer-logo">
-</footer>
+{{footer}}
 </body>
 </html>
