--- a/templates/search.html
+++ b/templates/search.html
@@ -144,8 +144,6 @@ if (initialQuery) {
   searchPosts(initialQuery);
 }
 </script>
-<footer>
-<img src="/0unz.png" alt="0u logo" class="footer-logo">
-</footer>
+{{footer}}
 </body>
 </html>
