--- a/templates/tag-detail.html
+++ b/templates/tag-detail.html
@@ -12,8 +12,6 @@
 <ul>
 {{posts_list}}
 </ul>
-<footer>
-<img src="/0unz.png" alt="0u logo" class="footer-logo">
-</footer>
+{{footer}}
 </body>
 </html>
