--- a/templates/base-style.html
+++ b/templates/base-style.html
@@ -16,7 +16,7 @@ body{
   padding:0 16px;
   background:var(--bg);
   color:var(--fg);
-  font-family:system-ui,-apple-system,BlinkMacSystemFont;
+  font-family:'Noto Sans SC', system-ui,-apple-system,BlinkMacSystemFont;
   line-height:1.7;
 }
 
