--- a/templates/tags.html
+++ b/templates/tags.html
@@ -34,8 +34,6 @@
 <ul class="tags-list">
 {{tags_list}}
 </ul>
-<footer>
-<img src="/0unz.png" alt="0u logo" class="footer-logo">
-</footer>
+{{footer}}
 </body>
 </html>
